pulled styles inline

--- a/alo-easymail-themes/hfc_mail.html
+++ b/alo-easymail-themes/hfc_mail.html
@@ -4,27 +4,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>[TITLE]</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<style type='text/css'>
-.tagline {
-    color: white;
-    font-size: 1.5em;
-}
-
-.body-text{
-    color: #494949;
-    font-family: Arial;
-    padding: 1em;
-    font-size: 100%;
-    line-height: 140%;
-}
-
-.subject-text{
-    color: #c959a1;
-    font-size: 2em;
-    font-family: 'Courier New';
-    text-align: center;
-}
-</style>
 </head>
 <body style='margin:0; padding: 0'>
 <table width='100%' border='0' cellpadding='0' cellspacing='0'>
@@ -56,7 +35,7 @@
                                 <td bgcolor='#c959a1'>
                                     <a href='[SITE-URL]'><img src='hfc_mail/hfc_logo_bottom.png' height='142px' width='239px' alt='Hope for Change Foundation'/></a>
                                 </td>
-                                <td bgcolor='#c959a1' class='tagline' align='right'>
+                                <td bgcolor='#c959a1' class='tagline' align='right' style='color: white; font-size: 1.5em;'>
                                     a unique organization dedicated to breast cancer research 
                                 </td>
                             </tr>
@@ -73,14 +52,14 @@
                 </tr>
                 <tr>
                     <td valign='top'>&nbsp;</td>
-                    <td class='subject-text' bgcolor='#ffffff'>
+                    <td class='subject-text' bgcolor='#ffffff' style=' color: #c959a1; font-size: 2em; font-family: Courier New; text-align: center; '>
                         <b>[TITLE]</b>
                     </td>
                     <td valign='top'>&nbsp;</td>
                 </tr>
                 <tr>
                     <td valign='top'>&nbsp;</td>
-                    <td class='body-text' bgcolor='#ffffff'>
+                    <td class='body-text' bgcolor='#ffffff' style=' color: #494949; font-family: Arial; padding: 1em; font-size: 100%; line-height: 140%; '>
                         [CONTENT]
                     </td>
                     <td valign='top'>&nbsp;</td>
