fixed some spacing / border issues when rendered in explorer

--- a/alo-easymail-themes/hfc_mail.html
+++ b/alo-easymail-themes/hfc_mail.html
@@ -16,7 +16,7 @@
                         <table width='100%' border='0' cellpadding='0' cellspacing='0' style="border-collapse: collapse;">
                             <tr>
 
-                                <td>
+                                <td align='top' valign='bottom'>
                                     <img src='hfc_mail/hfc_logo_top.png' height='36px' width='239px' alt=''/>
                                 </td>
                                 <td>
@@ -33,7 +33,9 @@
                         <table width='100%' border='0' cellpadding='0' cellspacing='0' style="border-collapse: collapse;">
                             <tr>
                                 <td bgcolor='#c959a1'>
-                                    <a href='[SITE-URL]'><img src='hfc_mail/hfc_logo_bottom.png' height='142px' width='239px' alt='Hope for Change Foundation'/></a>
+                                    <a href='[SITE-URL]' style='text-decoration: none;'>
+                                        <img src='hfc_mail/hfc_logo_bottom.png' style='border: 0' height='142px' width='239px' alt='Hope for Change Foundation'/>
+                                    </a>
                                 </td>
                                 <td bgcolor='#c959a1' class='tagline' align='right' style='color: white; font-size: 1.5em;'>
                                     a unique organization dedicated to breast cancer research 
@@ -44,15 +46,15 @@
                     <td bgcolor='#c959a1'></td>
                 </tr>
                 <tr>
-                    <td valign='top'><img src="hfc_mail/pinkcorners_0_0.png"  width='8px' height='8px' alt='' /></td>
+                    <td valign='top' align='right'><img src="hfc_mail/pinkcorners_0_0.png"  width='11px' height='11px' alt='' /></td>
                     <td bgcolor='#ffffff'>
                         &nbsp;
                     </td>
-                    <td valign='top' align='right'><img src="hfc_mail/pinkcorners_0_1.png" alt=''  width='8px' height='8px' /></td>
+                    <td valign='top' align='left'><img src="hfc_mail/pinkcorners_0_1.png" alt=''  width='11px' height='11px' /></td>
                 </tr>
                 <tr>
                     <td valign='top'>&nbsp;</td>
-                    <td class='subject-text' bgcolor='#ffffff' style=' color: #c959a1; font-size: 2em; font-family: Courier New; text-align: center; '>
+                    <td valign='top' class='subject-text' bgcolor='#ffffff' style=' color: #c959a1; font-size: 2em; font-family: Courier New; text-align: center; '>
                         <b>[TITLE]</b>
                     </td>
                     <td valign='top'>&nbsp;</td>
@@ -65,10 +67,10 @@
                     <td valign='top'>&nbsp;</td>
                 </tr>
                 <tr>
-                    <td valign='bottom'><img src="hfc_mail/tealcaps_0_0.png" alt='' width='11px' height='23px' /></td>
+                    <td valign='bottom' align='right'><img src="hfc_mail/tealcaps_0_0.png" alt='' width='11px' height='23px' /></td>
                     <td valign='bottom' bgcolor='#ffffff'>
                         <img src="hfc_mail/tealcaps_0_1.png" alt='' width='613px' height='23px' /></td>
-                    <td valign='bottom'><img src="hfc_mail/tealcaps_0_2.png" alt=''  width='11px' height='23px' /></td>
+                    <td valign='bottom' align='left' ><img src="hfc_mail/tealcaps_0_2.png" alt=''  width='11px' height='23px' /></td>
                 </tr>
                 <tr>
                     <td bgcolor='#b07f9f'></td>
