added unsub link

--- a/alo-easymail-themes/hfc_mail.html
+++ b/alo-easymail-themes/hfc_mail.html
@@ -80,6 +80,11 @@
                     </td>
                     <td bgcolor='#b07f9f'></td>
                 </tr>
+                <tr>
+                    <td></td>
+                    <td height='50px' valign='middle' align='center' style='font-size: 0.75em'><a href='[USER-UNSUBSCRIBE-URL]'>unsubscribe</a></td>
+                    <td></td>
+                </tr>
             </table>
         </td>
     </tr>
