fixed alignment in IE

--- a/alo-easymail-themes/hfc_mail.html
+++ b/alo-easymail-themes/hfc_mail.html
@@ -12,7 +12,7 @@
             <table width='600' border='0' cellpadding='0' cellspacing='0' style="border-collapse: collapse;">
                 <tr>
                     <td></td>
-                    <td>
+                    <td align='left'>
                         <table width='100%' border='0' cellpadding='0' cellspacing='0' style="border-collapse: collapse;">
                             <tr>
 
@@ -29,15 +29,15 @@
                 </tr>
                 <tr>
                     <td bgcolor='#c959a1'></td>
-                    <td>
+                    <td align='left' valign='top'>
                         <table width='100%' border='0' cellpadding='0' cellspacing='0' style="border-collapse: collapse;">
                             <tr>
-                                <td bgcolor='#c959a1'>
+                                <td align='left' valign='top' bgcolor='#c959a1'>
                                     <a href='[SITE-URL]' style='text-decoration: none;'>
                                         <img src='hfc_mail/hfc_logo_bottom.png' style='border: 0' height='142px' width='239px' alt='Hope for Change Foundation'/>
                                     </a>
                                 </td>
-                                <td bgcolor='#c959a1' class='tagline' align='right' style='color: white; font-size: 1.5em;'>
+                                <td bgcolor='#c959a1' class='tagline' align='right' valign='middle' style='color: white; font-size: 1.5em;'>
                                     a unique organization dedicated to breast cancer research 
                                 </td>
                             </tr>
@@ -68,7 +68,7 @@
                 </tr>
                 <tr>
                     <td valign='bottom' align='right'><img src="hfc_mail/tealcaps_0_0.png" alt='' width='11px' height='23px' /></td>
-                    <td valign='bottom' bgcolor='#ffffff'>
+                    <td valign='bottom' align='left' bgcolor='#ffffff'>
                         <img src="hfc_mail/tealcaps_0_1.png" alt='' width='613px' height='23px' /></td>
                     <td valign='bottom' align='left' ><img src="hfc_mail/tealcaps_0_2.png" alt=''  width='11px' height='23px' /></td>
                 </tr>
