fixed display of images on gmail and removed border on IE

--- a/alo-easymail-themes/hfc_mail.html
+++ b/alo-easymail-themes/hfc_mail.html
@@ -34,7 +34,7 @@
                             <tr>
                                 <td align='left' valign='top' bgcolor='#c959a1'>
                                     <a href='[SITE-URL]' style='text-decoration: none;'>
-                                        <img src='hfc_mail/hfc_logo_bottom.png' style='border: 0' height='142px' width='239px' alt='Hope for Change Foundation'/>
+                                        <img src='hfc_mail/hfc_logo_bottom.png' style='border: 0; display: block;' height='142px' width='239px' alt='Hope for Change Foundation'/>
                                     </a>
                                 </td>
                                 <td bgcolor='#c959a1' class='tagline' align='right' valign='middle' style='color: white; font-size: 1.5em;'>
@@ -46,11 +46,11 @@
                     <td bgcolor='#c959a1'></td>
                 </tr>
                 <tr>
-                    <td valign='top' align='right'><img src="hfc_mail/pinkcorners_0_0.png"  width='11px' height='11px' alt='' /></td>
+                    <td valign='top' align='right'><img src="hfc_mail/pinkcorners_0_0.png"  width='11px' height='11px' alt='' style='display: block' /></td>
                     <td bgcolor='#ffffff'>
                         &nbsp;
                     </td>
-                    <td valign='top' align='left'><img src="hfc_mail/pinkcorners_0_1.png" alt=''  width='11px' height='11px' /></td>
+                    <td valign='top' align='left'><img src="hfc_mail/pinkcorners_0_1.png" alt=''  width='11px' height='11px'  style='display: block'/></td>
                 </tr>
                 <tr>
                     <td valign='top'>&nbsp;</td>
@@ -67,16 +67,16 @@
                     <td valign='top'>&nbsp;</td>
                 </tr>
                 <tr>
-                    <td valign='bottom' align='right'><img src="hfc_mail/tealcaps_0_0.png" alt='' width='11px' height='23px' /></td>
+                    <td valign='bottom' align='right'><img src="hfc_mail/tealcaps_0_0.png" alt='' width='11px' height='23px'  style='display: block'/></td>
                     <td valign='bottom' align='left' bgcolor='#ffffff'>
-                        <img src="hfc_mail/tealcaps_0_1.png" alt='' width='613px' height='23px' /></td>
-                    <td valign='bottom' align='left' ><img src="hfc_mail/tealcaps_0_2.png" alt=''  width='11px' height='23px' /></td>
+                        <img src="hfc_mail/tealcaps_0_1.png" alt='' width='613px' height='23px'  style='display: block'/></td>
+                    <td valign='bottom' align='left' ><img src="hfc_mail/tealcaps_0_2.png" alt=''  width='11px' height='23px'  style='display: block'/></td>
                 </tr>
                 <tr>
                     <td bgcolor='#b07f9f'></td>
                     <td bgcolor='#b07f9f' height='60' valign='middle' align='center'>
-                        <a href="https://www.facebook.com/pages/The-Hope-for-Change-Foundation/219771063021" class="social"><img src="hfc_mail/fb.png" alt='Find us on Facebook!' /></a>
-                        <a href="https://twitter.com/#!/HFC_Foundation" class="social"><img src="hfc_mail/tw.png" alt='Find us on Twitter!' /></a>
+                        <a href="https://www.facebook.com/pages/The-Hope-for-Change-Foundation/219771063021" class="social" style='text-decoration: none'><img style='border: none; display: block' src="hfc_mail/fb.png" alt='Find us on Facebook!' /></a>
+                        <a href="https://twitter.com/#!/HFC_Foundation" class="social" style='text-decoration: none'><img style='border: none; display:block' src="hfc_mail/tw.png" alt='Find us on Twitter!' /></a>
                     </td>
                     <td bgcolor='#b07f9f'></td>
                 </tr>
