removed display block from social icons

--- a/alo-easymail-themes/hfc_mail.html
+++ b/alo-easymail-themes/hfc_mail.html
@@ -75,8 +75,8 @@
                 <tr>
                     <td bgcolor='#b07f9f'></td>
                     <td bgcolor='#b07f9f' height='60' valign='middle' align='center'>
-                        <a href="https://www.facebook.com/pages/The-Hope-for-Change-Foundation/219771063021" class="social" style='text-decoration: none'><img style='border: none; display: block' src="hfc_mail/fb.png" alt='Find us on Facebook!' /></a>
-                        <a href="https://twitter.com/#!/HFC_Foundation" class="social" style='text-decoration: none'><img style='border: none; display:block' src="hfc_mail/tw.png" alt='Find us on Twitter!' /></a>
+                        <a href="https://www.facebook.com/pages/The-Hope-for-Change-Foundation/219771063021" class="social" style='text-decoration: none'><img style='border: none; ' src="hfc_mail/fb.png" alt='Find us on Facebook!' /></a>
+                        <a href="https://twitter.com/#!/HFC_Foundation" class="social" style='text-decoration: none'><img style='border: none;' src="hfc_mail/tw.png" alt='Find us on Twitter!' /></a>
                     </td>
                     <td bgcolor='#b07f9f'></td>
                 </tr>
