missed an image re gmail fix

--- a/alo-easymail-themes/hfc_mail.html
+++ b/alo-easymail-themes/hfc_mail.html
@@ -17,7 +17,7 @@
                             <tr>
 
                                 <td align='top' valign='bottom'>
-                                    <img src='hfc_mail/hfc_logo_top.png' height='36px' width='239px' alt=''/>
+                                    <img src='hfc_mail/hfc_logo_top.png' height='36px' width='239px' alt='' style='display:block;'/>
                                 </td>
                                 <td>
                                     &nbsp;
